@@ -1,7 +1,6 @@
 package no.nav.dokdisteformidling.qdist013;
 
 import lombok.SneakyThrows;
-import org.apache.commons.io.IOUtils;
 import org.springframework.core.io.ClassPathResource;
 
 import javax.xml.datatype.XMLGregorianCalendar;
@@ -23,11 +22,8 @@ public final class TestUtil {
 
     @SneakyThrows
     public static String classpathToString(String classpathResource) {
-        try {
-            InputStream inputStream = new ClassPathResource(classpathResource).getInputStream();
-            String message = IOUtils.toString(inputStream, UTF_8);
-            IOUtils.closeQuietly(inputStream);
-            return message;
+        try (InputStream inputStream = new ClassPathResource(classpathResource).getInputStream()) {
+            return new String(inputStream.readAllBytes(), UTF_8);
         } catch (IOException e) {
             throw new IOException(format("Kunne ikke åpne classpath-ressurs %s", classpathResource), e);
         }
